# Yall

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: Yall.h
includes/: Yall.h
test/: YallTest.cpp
